<resources>
    <string name="app_name">FoodPandaAppClone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Log in / Create account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="deliver_to">deliver to:</string>
    <string name="current_location">Current Location</string>
    <string name="log_in">Log in</string>
    <string name="facebook_app_id">315037055874672</string>
    <string name="fb_login_protocol_scheme">fb315037055874672</string>
    <string name="or">OR</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in_mail">Log in</string>
    <string name="forgot_Password">Forgot Password?</string>
    <string name="new_user_create_an_account">New user? Create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_please_enter">Forgot password, please enter</string>
    <string name="your_Address">Email Address</string>
    <string name="cont">Continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create account</string>
    <string name="create_an_account_to_save_all">Create an account to save all</string>
    <string name="your_info_for_your_next_order">your info for your next order.</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="already_a_member_log_in">Already a member? Log in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="join_now">Join Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_email_here_to_reset_password">your email here to reset password</string>
    <string name="log_out">Log out</string>
    <string name="cuisine_or_a_restaurant_name">Cuisine or a restaurant name</string>
    <string name="fast_delivery_1">Fast Delivery</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivered_by_foodpanda">Delivered By FoodPanda</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="no_filters_available_yet">No Filters Available yet</string>
    <string name="you_have_not_made_any_orders_yet">You have not made any orders yet!</string>
    <string name="no_addresses_added_yet">No addresses added yet!</string>
    <string name="no_vouchers_available_yet">No vouchers Available Yet!</string>
    <string name="no_links_provided_yet">No links provided yet!</string>


</resources>
