<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/cross_out"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/cross_btn_forgot_password"
            android:layout_marginStart="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPink"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="90dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginStart="90dp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="90dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="90dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:text="@string/forgot_password_please_enter"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_here_to_reset_password"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:hint="@string/email_address"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_style"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:id="@+id/continue_btn"/>

</LinearLayout>