<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp">
        <TextView
        android:text="Delivery Date"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:contentDescription="@string/app_name" />
    </LinearLayout>
    <!--date Selection-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:paddingLeft="35dp"
        android:paddingRight="20dp"
        android:id="@+id/select_date"
        android:onClick="selectDate">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/text_date"/>

    </LinearLayout>


<!--time selection-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="35dp"
        android:paddingRight="20dp"
        android:layout_marginTop="50dp"
        android:id="@+id/select_time"
        android:onClick="selectTime">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/text_time"/>



    </LinearLayout>



</LinearLayout>