<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/deliver_to" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:text="@string/current_location"
                android:textColor="@color/colorPink" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:background="@color/orColor" />
    <!--searchBar-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="39dp"

                android:src="@drawable/search" />

            <EditText
                android:id="@+id/searchbar_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@null"
                android:hint="@string/cuisine_or_a_restaurant_name" />

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#e7e7e7" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:src="@drawable/equilizer_bars" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>




    <include layout="@layout/content_main" />




</LinearLayout>
